# SlothBearFlow

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  local_run.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  deps.py  llm.py  main.py  output_parser.py  prompt.py
app/agent/: agent_executor.py
app/memory/: redis_memory.py  short_memory.py  summary_memory.py
app/persistence/: postgres.py
app/rag/: embedding.py  ingest.py  milvus_store.py
app/tools/: __init__.py  registry.py  weather_tool.py
app/worker/: __init__.py  background.py
backend/: .env.e2e.example  .env.example  .env.observability.example  Dockerfile  docker-compose.e2e.yml  docker-compose.observability.yml  docker-compose.production.yml  docker-compose.yml  local_run.py  requirements-dev.txt  requirements.txt
backend/config/: tool_policy.yaml
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 20260716_0001_initial_schema.py  20260716_0002_runtime_hardening.py  20260717_0003_memory_rag_consistency.py  20260723_0004_user_session_metadata.py  20260723_0005_backfill_legacy_sessions.py
backend/scripts/: evaluate_rag.py  generate_observability_env.py  hash_password.py  init_milvus_auth.py  run_openai_stub.py  verify_observability.py
backend/src/slothbearflow_backend/: __init__.py  config.py  deps.py  llm.py  main.py  output_parser.py  output_schema.py  prompt.py
backend/src/slothbearflow_backend/agent/: __init__.py  agent_executor.py  content.py  conversation_loop.py  react_runtime.py  run_result.py  tool_trace.py
backend/src/slothbearflow_backend/evaluation/: __init__.py  llm_judge.py  runner.py  schema.py
backend/src/slothbearflow_backend/learning/: __init__.py  index_db.py  learning_tools.py  review_agent.py  review_guard.py  schema.py  snapshot.py  store.py
backend/src/slothbearflow_backend/mcp/: __init__.py  client.py  manager.py
backend/src/slothbearflow_backend/memory/: __init__.py  privacy.py  redis_memory.py  short_memory.py  summary_memory.py
backend/src/slothbearflow_backend/observability/: __init__.py  context.py  facade.py  middleware.py  redaction.py
backend/tests/: conftest.py  test_background_review.py  test_mcp_security_hardening.py  test_memory_security_hardening.py  test_observability_hardening.py  test_production_hardening.py  test_rag_hardening.py  test_smoke.py  test_tool_guard.py
docs/: SlothBearFlow-Agent能力全景梳理.md  SlothBearFlow-Reflection反思复盘机制.md  SlothBearFlow-工具调用安全加固.md  SlothBearFlow-已实现功能点总结.md  SlothBearFlow-本地运行与三组件集成优化记录.md  SlothBearFlow-项目知识库种子数据.md  SlothBearFlow-项目知识库问答卡片.md  代码审查.md
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/config/: config.ts
frontend/src/pages/: index.css  index.tsx
tests/: test_smoke.py
(+34 files in other folders)
