[project]
name = "slothbearflow"
version = "0.1.0"
description = "Production-oriented LangChain agent service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "alembic>=1.14.0,<2",
    "fastapi>=0.115.0,<1",
    "httpx>=0.27.0,<1",
    "langchain>=0.3.18,<0.4",
    "langchain-community>=0.3.16,<0.4",
    "langchain-core>=0.3.51,<0.4",
    "langchain-milvus>=0.1.6,<0.2",
    "langchain-ollama>=0.2.0,<0.3",
    "langchain-openai>=0.2.14,<0.3",
    "langchain-text-splitters>=0.3.6,<0.4",
    "langfuse>=3.0.0,<4",
    "prometheus-client>=0.21.0,<1",
    "psycopg[binary,pool]>=3.2.0,<4",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.2.0,<3",
    "pymilvus>=2.4.4,<3",
    "python-dotenv>=1.0.1,<2",
    "PyYAML>=6.0,<7",
    "redis>=5.0.0,<6",
    "SQLAlchemy>=2.0.36,<3",
    "tiktoken>=0.8.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.3.0,<6",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0,<8",
    "mypy>=1.14.0,<2",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.9.0,<1",
    "types-PyYAML>=6.0.12,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.3"
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    ".venv.bak",
    "frontend/dist",
    "frontend/node_modules",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
# These are existing findings outside this engineering-only change boundary.
ignore = ["B008", "B904", "B905", "F401", "F841"]

[tool.mypy]
python_version = "3.12"
files = [
    "backend/migrations/env.py",
    "backend/src/slothbearflow_backend/agent/run_result.py",
    "backend/src/slothbearflow_backend/config.py",
    "backend/src/slothbearflow_backend/evaluation/schema.py",
    "backend/src/slothbearflow_backend/observability/context.py",
    "backend/src/slothbearflow_backend/output_schema.py",
]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["backend/src/slothbearflow_backend"]
omit = [
    "backend/src/slothbearflow_backend/__init__.py",
]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"
